WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37922
Lots of leaks of SVGFilterBuilder objects in RenderSVGResourceFilter
https://bugs.webkit.org/show_bug.cgi?id=37922
Summary
Lots of leaks of SVGFilterBuilder objects in RenderSVGResourceFilter
Adam Roben (:aroben)
Reported
2010-04-21 07:11:47 PDT
The SnowLeopard leaks bot is showing lots of leaks of SVGFilterBuilder objects in RenderSVGResourceFilter. I think the bug is in RenderSVGResourceFilter::applyResource, which allocates a FilterData (which holds an SVGFilterBuilder) on the heap, but doesn't destroy it when returning early under error conditions. Using an OwnPtr should fix this easily.
Attachments
Fix leaks of FilterData/SVGFilterBuilder in RenderSVGResourceFilter
(1.59 KB, patch)
2010-04-21 07:40 PDT
,
Adam Roben (:aroben)
hyatt
: review+
hyatt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-04-21 07:12:28 PDT
<
rdar://problem/7888397
>
Adam Roben (:aroben)
Comment 2
2010-04-21 07:40:42 PDT
Created
attachment 53955
[details]
Fix leaks of FilterData/SVGFilterBuilder in RenderSVGResourceFilter
Dave Hyatt
Comment 3
2010-04-21 07:41:23 PDT
Comment on
attachment 53955
[details]
Fix leaks of FilterData/SVGFilterBuilder in RenderSVGResourceFilter r=me
Adam Roben (:aroben)
Comment 4
2010-04-21 07:43:07 PDT
Committed
r57980
: <
http://trac.webkit.org/changeset/57980
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug