Fix leaks of FilterData/SVGFilterBuilder in RenderSVGResourceFilter

Fixes <http://webkit.org/b/37922>.

Reviewed by Dave Hyatt.

* rendering/RenderSVGResourceFilter.cpp:
(WebCore::RenderSVGResourceFilter::applyResource): Use an OwnPtr to
hold the heap-allocated FilterData object, so that we won't leak it
when we bail out of this function on error.

Canonical link: https://commits.webkit.org/49261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57980 268f45cc-cd09-0410-ab3c-d52691b4dbfc