WebCore/rendering/RenderSVGResourceFilter.cpp
@@ -149,7 +149,7 @@ bool RenderSVGResourceFilter::applyResource(RenderObject* object, GraphicsContex
         delete m_filter.take(object); // Oops, have to rebuild, go through normal code path
     }
 
-    FilterData* filterData = new FilterData;
+    OwnPtr<FilterData> filterData(new FilterData);
     filterData->builder = buildPrimitives();
     if (!filterData->builder)
         return false;
@@ -223,7 +223,7 @@ bool RenderSVGResourceFilter::applyResource(RenderObject* object, GraphicsContex
     m_savedContext = context;
 
     context = sourceGraphicContext;
-    m_filter.set(object, filterData);
+    m_filter.set(object, filterData.release());
 
     return true;
 }
